[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngram-builder"
version = "0.1.0"
description = "Configurable n-gram dictionary builder for Hugging Face datasets and local text sources"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.18.0",
  "tqdm>=4.66.0",
  "sudachipy>=0.6.8",
  "sudachidict_core>=20240109",
]

[project.optional-dependencies]
fugashi = ["fugashi>=1.3.0", "unidic-lite>=1.0.8"]

[project.scripts]
ngram-builder = "ngram_builder.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ngram_builder*"]
